# Butterscotch

./: CMakeLists.txt  Makefile  README.md  butterscotch_ps3.sln  butterscotch_ps3.vcxproj
.github/workflows/: build.yml  tests.yml
build_test/: CMakeCache.txt  Makefile  butterscotch  cmake_install.cmake
compat/: configure.sh
compat/getopt/: getopt.h
compat/stdbool/: stdbool.h
compat/stdint/: stdint.h
src/: audio_system.h  binary_reader.c  binary_reader.h  binary_utils.h  collision.h  common.h  data_win.c  data_win.h  debug_overlay.h  event_table.c  event_table.h  file_system.h  gettime.h  gml_array.c  gml_array.h  gml_method.c  gml_method.h  ini.c  ini.h  input_recording.c  input_recording.h  instance.c  instance.h  int_int_hashmap.c  int_int_hashmap.h  int_rvalue_hashmap.c  int_rvalue_hashmap.h  json_reader.c  json_reader.h  json_writer.h  math_compat.h  matrix_math.h  noop_audio_system.c  noop_audio_system.h  noop_file_system.c  noop_file_system.h  overlay_file_system.c  overlay_file_system.h  profiler.c  profiler.h  (+22 more)
src/audio/miniaudio/: ma_audio_system.c  ma_audio_system.h
src/audio/openal/: al_audio_system.c  al_audio_system.h  wave.c  wave.h
src/audio/ps2/: ps2_audio_system.h
src/audio/web/: web_audio_system.h
src/debug_font/: debug_font.h  debug_font_4bpp.h
src/desktop/: main.c  platformdefs.h
src/desktop/backends/: glfw3.c  sdl1.c  sdl2.c  sdl3.c
src/gl/: gl_renderer.c  gl_renderer.h
src/gl_common/: gl_common.c  gl_common.h
src/gl_legacy/: gl_legacy_renderer.c  gl_legacy_renderer.h
src/glfw/: main.c
src/image/: image_decoder.h
src/ps2/: debug_font_renderer.h  gs_renderer.c  gs_renderer.h  main.c  ps2_file_system.c  ps2_file_system.h  ps2_gamepad.h  ps2_overlay.h  ps2_utils.c  ps2_utils.h
src/ps3/: main.c  ps3_file_system.c  ps3_file_system.h  ps3_overlay.c  ps3_overlay.h  ps3_renderer.c  ps3_renderer.h  ps3_textures.h
src/web/: main.c
tests/: tests.conf
tests/Flowey/src/main/kotlin/net/perfectdreams/butterscotch/flowey/: Flowey.kt  TestSuite.kt
tests/struct-get-names-test/: data.win
tests/try-catch-finally-test/: data.win
tests/undertale-ptbr-winpack/: gameplay.json
